バックエンドでの提案パートも完成
